added graphics and intro paragraphs

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,8 @@ website:
         text: "Home"
       - href: about.qmd
         text: "About Me"
+      - href: example.qmd
+        text: "Examples of Work"
 
 format:
   html:
